crates/mecojoni-core/tests/fixtures/invalid/unsupported-version.meco
---
meco: 1.0
module: npc
---

# greeting
- Hello.
